examples/type_system/failing/120_match_pipe_separator.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let x = match 1 { 0 -> 0 | _ -> 1 }
    x
}
